--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -27,3 +27,9 @@ html.dark {
   width: 100%;
   height: 2px;
 }
+
+.dropzone {
+  @apply col center my-4 mx-2d w-full h-full border-2 border-dashed border-gray-800 rounded-md;
+  @apply bg-gray-100 text-gray-800 text-center text-sm font-medium transition-colors duration-150 ease-in-out;
+  @apply px-4 py-4 cp opacity-50 hover: opacity-100;
+}
