--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -33,3 +33,19 @@ html.dark {
   @apply bg-gray-100 text-gray-800 text-center text-sm font-medium transition-colors duration-150 ease-in-out;
   @apply px-4 py-4 cp opacity-50 hover: opacity-100;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ebebeb;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #6d6d6d;
+}
